RESOLVED FIXED31928
DOMWindow::inspectorTimelineAgent is not guarded with ENABLE(INSPECTOR)
https://bugs.webkit.org/show_bug.cgi?id=31928
Summary DOMWindow::inspectorTimelineAgent is not guarded with ENABLE(INSPECTOR)
Steve Block
Reported 2009-11-27 05:03:20 PST
DOMWindow::inspectorTimelineAgent is not guarded with ENABLE(INSPECTOR). This uses methods defined only when INSPECTOR is enabled.
Attachments
Patch 1 for Bug 31928 (1.21 KB, patch)
2009-11-27 05:08 PST, Steve Block
no flags
Steve Block
Comment 1 2009-11-27 05:08:42 PST
Eric Seidel (no email)
Comment 2 2009-11-28 09:40:59 PST
Comment on attachment 43945 [details] Patch 1 for Bug 31928 LGTM.
WebKit Commit Bot
Comment 3 2009-11-30 09:17:49 PST
Comment on attachment 43945 [details] Patch 1 for Bug 31928 Clearing flags on attachment: 43945 Committed r51495: <http://trac.webkit.org/changeset/51495>
WebKit Commit Bot
Comment 4 2009-11-30 09:17:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.