2009-11-30  Steve Block  <steveblock@google.com>

Reviewed by Eric Seidel.

        Adds ENABLE(INSPECTOR) guards around DOMWindow::inspectorTimelineAgent.
        https://bugs.webkit.org/show_bug.cgi?id=31928

        Build fix only, no new tests.

        * page/DOMWindow.cpp: Modified. Adds ENABLE(INSPECTOR) guards around DOMWindow::inspectorTimelineAgent.

Canonical link: https://commits.webkit.org/42923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51495 268f45cc-cd09-0410-ab3c-d52691b4dbfc